# inventoryReservationSystemRust

./: AGENTS.md  CHEATSHEET.md  Cargo.toml  PLAN.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: contention.rs
docs/: adr-001-persistence.md  parity-evidence-2026-05-18.md  prompt.md
specs/: http-adapter.md  level-1-basic-reservation.md  level-2-lifecycle.md  level-3-concurrency.md
src/: lib.rs
src/application/: mod.rs  reservation_service.rs
src/domain/: clock.rs  errors.rs  events.rs  mod.rs  reservation.rs
src/interface/: http.rs
tests/: clock.rs  http_adapter.rs  level_1_basic_reservation.rs  level_2_lifecycle.rs  level_3_concurrency.rs  proptest_lifecycle.rs  reseed.rs  trace_events.rs
