[package]
name = "inventory_reservation"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dashmap = "6"
parking_lot = "0.12"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "contention"
harness = false
